# haskell-conjunction

./: .gitignore  CHANGELOG.md  LICENSE  NOTICE  default.nix  flake.nix  haskell-conjunction.cabal  result  shell.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 145l1rs82d1q2wklhjgrvara603xqfh7-source  abmxwmr9chh3v5dr3iw4yjxz9dmllvn4-source
api/: Main.hs
api/Api/: Config.hs  Database.hs  Routes.hs  Types.hs
app/: Main.hs
app/SpaceTrack/: App.hs  Client.hs  Config.hs  Database.hs  Json.hs  Satcat.hs  Throttle.hs  Types.hs
bench/: Bench.hs  direct_sgp4_bench.cpp  run-benchmarks.sh  workload.tsv
cbits/: sgp4_capi.cpp  sgp4_capi.h
conjunction/: Main.hs
conjunction/ConjunctionScreen/: App.hs  Config.hs  Database.hs
dist-newstyle/bench/: direct-sgp4-bench
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.10.3/: haskell-conjunction-0.1.0.0-inplace.conf  package.cache
docs/: conjunction-notify.md  conjunction-screening.md  space-acronyms.md  spacetrack-leo-ingest.md  visualizer.md  what-papers-are-there-out-there-for-efficiently-co.md
nix/: web.nix
nix/modules/: spacetrack-leo-ingest.nix
notify/: Main.hs
notify/ConjunctionNotify/: App.hs  Config.hs  Database.hs  Ntfy.hs
sgp4/java/: JAVA SGP4 v1.allow  JAVA SGP4 v2.allow  readme JAVA Notes.txt
sgp4/java/JAVA_SGP4_v1/: JAVA SGP4v1 readme.txt
sgp4/java/JAVA_SGP4_v2/: JAVA SGP4v2 readme.txt
src/: Brightness.hs  SGP4.hs
src/Conjunction/: CMCombo.hs  Catalog.hs  Grid.hs  Parallel.hs  Progress.hs  Run.hs  Screen.hs  Types.hs  Visibility.hs
src/SGP4/: Bindings.hs  Coordinate.hs  Frames.hs  Propagate.hs  TLE.hs  Time.hs  Types.hs
test/: TestConjunction.hs  TestSGP4.hs  TestVisibility.hs
web/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/api/: client.ts  types.ts
web/src/cesium/: AltitudeShells.ts  InertialCamera.ts  SatelliteFocus.ts  SatelliteLayer.ts  VisibilityPredictor.ts  colorModes.ts  propagate.ts  regime.ts  solar.ts  visibility.ts
web/src/components/: Analytics.tsx  CesiumGlobe.tsx  ConjunctionList.tsx  EncounterInset.tsx  InfoPanel.tsx  Sidebar.tsx  VisibilityPanel.tsx
web/src/conjunction/: geometry.ts  risk.ts  theater.ts
web/src/state/: store.ts  useVisibility.ts
web/src/workers/: visibility.worker.ts
